# 3D-Billiards

./: CMakeLists.txt  LICENSE  README.md
include/: camera.h  canvas.h  defs.h  game.h  light.h  material.h  obj_loader.h  object.h  program.h  scene.h  shader.h  state_controler.h  stb_image.h  table_manager.h  texture.h  tiny_obj_loader.h
include/GLFW/: glfw3.h
include/glad/: glad.h
include/glm/: geometric.hpp
include/glm/detail/: type_half.inl
include/glm/gtc/: quaternion.inl
resources/models/room/material/burlington_leather_bda9f9ac-a7af-4d48-a4ea-10e584d236d3/: burlington_leather_1K_ff4e8074-f560-45e5-8be0-017786d68205.blend
resources/models/stick/: CueStick.mtl
resources/shaders/: billiard_fs.glsl  table_fs.glsl
src/: camera.cpp  canvas.cpp  game.cpp  glad.c  light.cpp  main.cpp  material.cpp  obj_loader.cpp  object.cpp  program.cpp  scene.cpp  shader.cpp  stb_image.cpp  table_manager.cpp  texture.cpp  tiny_obj_loader.cpp
